[package]
name = "rust-lilypond-invoke-editor"
version = "0.1.0"
authors = ["Jean-David Moisan <vynecompiler@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/Apostolique/rust-lilypond-invoke-editor"
license = "MIT"
keywords = ["lilypond", "apos"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
